<resources>
    <string name="app_name">BionicLens</string>
    <string name="camera_activity"> Open camera </string>
    <string name="obj_recognition">Object Recognition</string>
    <string name="age_recognition">Age&amp;Gender Recognition</string>
    <string name="text_recognition">Text Recognition</string>
    <string name="face_detection">Face Detection</string>
    <string name="obj_recogn_activity">Object Recognition</string>
    <string name="age_recogn_activity">Age&amp;Gen Recognition</string>
    <string name="face_det_enable_contour">Enable Face Contour</string>
    <string name="face_det_disable_contour">Disable Face Contour</string>
    <string name="face_det_enable_landmarks">Enable Face Landmarks</string>
    <string name="face_det_disable_landmarks">Disable Face Landmarks</string>
    <string name="face_det_enable_classification">Enable Classification</string>
    <string name="face_det_disable_classification">Disable Classification</string>
    <string name="face_det_enable_tracking">Enable Face Tracking</string>
    <string name="face_det_disable_tracking">Disable Face Tracking</string>
    <string name="face_det_favor_performance">Favor Performance</string>
    <string name="face_det_favor_accuracy">Favor Accuracy</string>
    <string name="intro">Intro</string>
    <string name="selfie_segmentation">Selfie Segmentation</string>
    <string name="latin_only">Latin Symbols Only</string>
    <string name="chinese_and_latin">Chinese and Latin</string>
    <string name="japanese_and_latin">Japanese and Latin</string>
    <string name="korean_and_latin">Korean and Latin</string>
    <string name="devanagari_and_latin">Devanagari and Latin</string>
    <string name="translate_to_english">Translate to English</string>
    <string name="translate_to_romanian">Translate to Romanian</string>
    <string name="obj_det_mode">Single Image Mode</string>
    <string name="obj_det_multiple_objects">Single Object Detection</string>
    <string name="obj_det_classify">Turn OFF Classification</string>
    <string name="obj_det_increase_labels">Show More Labels</string>
    <string name="obj_det_decrease_labels">Show Less Labels</string>
    <string name="segmentation_solid_color_background">Solid Color Background</string>
    <string name="segmentation_background1">Use Background 1</string>
    <string name="segmentation_background2">Use Background 2</string>
    <string name="segmentation_background3">Use Background 3</string>
</resources>
