<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_purple_gradient"
    tools:context=".objectrecognition.ObjRecognitionActivity">

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:background="@drawable/settings_cog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingClass,MissingConstraints"></androidx.camera.view.PreviewView>

    <com.example.bioniclens.utils.GraphicOverlay
        android:id="@+id/graphic_overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@id/viewFinder"
        app:layout_constraintRight_toRightOf="@id/viewFinder"
        app:layout_constraintTop_toTopOf="@id/viewFinder"
        app:layout_constraintBottom_toBottomOf="@id/viewFinder" />

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/obj_activity_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"></ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hammersmith_one_regular"
        android:text="@string/obj_recognition"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052"></TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/text_recognition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/option_button"
            android:fontFamily="@font/hammersmith_one_regular"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/text_recognition"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/face_detection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="30dp"
            android:background="@drawable/option_button"
            android:fontFamily="@font/hammersmith_one_regular"
            android:text="@string/face_detection"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/selfie_segmentation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/option_button"
            android:fontFamily="@font/hammersmith_one_regular"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/selfie_segmentation"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutSettingsEnable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/detection_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/option_button"
            android:fontFamily="@font/hammersmith_one_regular"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/obj_det_mode"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/object_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="30dp"
            android:background="@drawable/option_button"
            android:fontFamily="@font/hammersmith_one_regular"
            android:text="@string/obj_det_multiple_objects"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/classify_objects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="30dp"
            android:background="@drawable/option_button"
            android:fontFamily="@font/hammersmith_one_regular"
            android:text="@string/obj_det_classify"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/more_labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="30dp"
            android:background="@drawable/option_button"
            android:fontFamily="@font/hammersmith_one_regular"
            android:text="@string/obj_det_increase_labels"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/less_labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="30dp"
            android:background="@drawable/option_button"
            android:fontFamily="@font/hammersmith_one_regular"
            android:text="@string/obj_det_decrease_labels"
            android:textColor="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/switchCameraButton"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:background="@drawable/switch_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <ImageButton
        android:id="@+id/netButton"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:background="@drawable/net_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>