<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/size"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_purple_gradient"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/introButton"
        android:layout_width="94dp"
        android:layout_height="34dp"
        android:background="@drawable/btn_detect"
        android:text="@string/intro"
        android:fontFamily="@font/hammersmith_one_regular"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732"
        tools:ignore="MissingClass" />

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="146dp"
        android:layout_height="51dp"
        android:background="@drawable/btn_detect"
        android:text="@string/camera_activity"
        android:fontFamily="@font/hammersmith_one_regular"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.638"
        tools:ignore="MissingClass" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.414"
        app:srcCompat="@drawable/ic_icon"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/designView"
        android:layout_width="414dp"
        android:layout_height="182dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/design_vector" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#EEEEEE"
        android:textSize="36sp"
        android:fontFamily="@font/hammersmith_one_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262"
        tools:ignore="ContentDescription" />



</androidx.constraintlayout.widget.ConstraintLayout>